<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mask_cycle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_leaderboard"
            app:destination="@id/nav_leaderboard" />
    </fragment>

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.mask_cycle.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_connect"
        android:name="com.example.mask_cycle.ui.share.ShareFragment"
        android:label="@string/menu_connect"
        tools:layout="@layout/fragment_connect"/>

</navigation>