<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaskCycle.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MaskCycle.PopupOverlay">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />


    <Button
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="58dp"
        android:text="@string/join_competition"
        android:visibility="gone"
        android:id="@+id/joinCompetition"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/infoButton"
        android:src="@drawable/ic_outline_info_24"
        android:tint="@color/white"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="225dp"
        android:src="@drawable/ic_outline_leaderboard_24"
        android:id="@+id/leaderboardButton"
        android:tint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="300dp"
        android:layout_gravity="end|top"
        android:src="@drawable/ic_baseline_refresh_24"
        android:id="@+id/refreshButton"
        android:tint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/teaminfo"
        android:id="@+id/teamButton"
        android:tint="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="45dp"
        android:id="@+id/cvTest"
        app:cardCornerRadius="14dp"
        android:layout_gravity="end|bottom"
        android:focusable="true">

        <TextView
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/testing_background"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom|center_horizontal"
            android:text="@string/covid_testing_centres"
            android:textColor="@color/violet" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="45dp"
        app:cardCornerRadius="14dp"
        android:layout_marginBottom="20dp"
        android:focusable="true">

        <TextView
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/mask_background"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal|bottom"
            android:text="@string/mask_drop_off_centres"
            android:textColor="@color/violet" />
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>